# naga-rs

./: .gitignore  Cargo.toml  README.md
src/: get_playlist_urls.py  lib.rs  main.rs  slash_handler.rs  utils.rs  voice_manager.rs
src/commands/: clear.rs  current.rs  join.rs  leave.rs  mod.rs  pause.rs  ping.rs  play.rs  queue.rs  remove.rs  shuffle.rs  skip.rs  song_loop.rs
