[package]
name = "naga-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
futures-channel = "0.3"

[dependencies.serenity]
version = "0.11"
features = ["cache", "voice", "rustls_backend", "collector"]
default-features = false

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
